fixed typo in input field

--- a/hca_database_file/templates/index.html
+++ b/hca_database_file/templates/index.html
@@ -2,12 +2,12 @@
     <head>
         <title>Upload tsv file to database</title>
         <style type="text/css">
-            .uploadForm 
+            .uploadForm
                 {
                     text-align: center;
                     color: orange
                 }
-            .formElements 
+            .formElements
                 {
                     display: inline-block;
                     color: blue;
@@ -27,7 +27,7 @@
     </head>
 
     <body>
-        
+
         <div class="uploadForm">
             <h1>HCA Coding Test</h1>
             <div class="formElements">
@@ -39,7 +39,7 @@
                 <br/>
                 <br/>
                 <input type="checkbox" name="overwrite" value="1"><label>Overwrite exisiting records</label></br></br>
-                <input type="submit" value="Upload"/ id="uploadButton">
+                <input type="submit" value="Upload" id="uploadButton">
             </form>
             </div>
         </div>
